{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 38,
  "lineage": "122a6cca-d9cf-c017-01ba-56394aa325a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:655279083371:instance/i-074e5bc5f3cc9426c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074e5bc5f3cc9426c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07e40947320cd03b7",
            "private_dns": "ip-192-168-0-220.ec2.internal",
            "private_ip": "192.168.0.220",
            "public_ip": "3.229.135.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0be73e5f44e51bd33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0770c70037ddad740",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00eb3255d79fb0bef",
              "sg-06d38358dd4d5dfbf"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.app_key_pair",
            "aws_security_group.allow_http",
            "aws_security_group.allow_ssh",
            "aws_subnet.sub",
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0abfbe072b99bdb9c",
            "owner_id": "655279083371",
            "tags": {
              "Name": "PFA_Server"
            },
            "vpc_id": "vpc-07b51eb2b959bbb1e"
          },
          "dependencies": [
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09850266a7fe22d14",
            "owner_id": "655279083371",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0abfbe072b99bdb9c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PFA_Server"
            },
            "vpc_id": "vpc-07b51eb2b959bbb1e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0374ed7819916ac8c",
            "route_table_id": "rtb-09850266a7fe22d14",
            "subnet_id": "subnet-0770c70037ddad740"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_subnet.sub",
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_out",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655279083371:security-group/sg-00dc5c6ffd5396721",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dc5c6ffd5396721",
            "ingress": [],
            "name": "allow_all_out",
            "name_prefix": null,
            "owner_id": "655279083371",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-07b51eb2b959bbb1e"
          },
          "dependencies": [
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655279083371:security-group/sg-00eb3255d79fb0bef",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00eb3255d79fb0bef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "655279083371",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-07b51eb2b959bbb1e"
          },
          "dependencies": [
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655279083371:security-group/sg-0f8d50b7985a28ff4",
            "description": "Allow https traffic",
            "egress": [],
            "id": "sg-0f8d50b7985a28ff4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": null,
            "owner_id": "655279083371",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-07b51eb2b959bbb1e"
          },
          "dependencies": [
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655279083371:security-group/sg-06d38358dd4d5dfbf",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-06d38358dd4d5dfbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "655279083371",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-07b51eb2b959bbb1e"
          },
          "dependencies": [
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655279083371:subnet/subnet-0770c70037ddad740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0770c70037ddad740",
            "map_public_ip_on_launch": false,
            "owner_id": "655279083371",
            "tags": {
              "Name": "PFA_Server"
            },
            "vpc_id": "vpc-07b51eb2b959bbb1e"
          },
          "dependencies": [
            "aws_vpc.PFA_Server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PFA_Server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655279083371:vpc/vpc-07b51eb2b959bbb1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00a9441fbe5818a00",
            "default_route_table_id": "rtb-056c9036778cb6c6a",
            "default_security_group_id": "sg-08c422e453dff08a8",
            "dhcp_options_id": "dopt-5072812a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07b51eb2b959bbb1e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-056c9036778cb6c6a",
            "owner_id": "655279083371",
            "tags": {
              "Name": "PFA_Server"
            }
          }
        }
      ]
    }
  ]
}